--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
-    <title>airbclub</title>
+    <meta property="og:image" content="/images/me-gray.png"/>
+    <meta property="og:title" content="Official Herbert Saladar"/>
+    <meta property="og:description" content="Hi! I'm Herbert feel free to checkout my creative profile!"/>
+    <meta property="og:url" content="hsldr.com"/>
+    <meta property="og:site_name" content="Herberts Creative Portfolio"/>
+    <title>Official Herbert Saladar</title>
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,200italic,900,700italic,700,600italic,600,400italic,300italic,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <noscript>
