optimize image and add meta data

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
-    <meta property="og:image" content="/images/me-gray.png"/>
-    <meta property="og:title" content="Herbert Saladar"/>
-    <meta property="og:description" content="Hi! I'm Herbert I am a web devveloper and a front end engineer feel free to checkout my creative profile!"/>
-    <meta property="og:url" content="hsldr.com"/>
-    <meta property="og:site_name" content="Herberts Creative Portfolio"/>
+    <meta property="og:image" content="/images/me-gray.png" name="ogimage"/>
+    <meta property="og:title" content="Herbert Saladar" name="ogtitle"/>
+    <meta property="og:description" content="Hi! I'm Herbert I am a web devveloper and a front end engineer feel free to checkout my creative profile!" name="ogdescription"/>
+    <meta property="og:url" content="herbert-saladar.com" name="ogurl"/>
+    <meta property="og:site_name" content="Herberts Creative Portfolio" name="ogsitename"/>
+    <meta name="description" content="Herberts Creative Portfolio"/>
+
     <title>Herbert Saladar</title>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,200italic,900,700italic,700,600italic,600,400italic,300italic,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
