--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
     <meta property="og:image" content="/images/me-gray.png" name="ogimage"/>
     <meta property="og:title" content="Herbert Saladar" name="ogtitle"/>
-    <meta property="og:description" content="Hi! I'm Herbert I am a web devveloper and a front end engineer feel free to checkout my creative profile!" name="ogdescription"/>
+    <meta property="og:description" content="Hi! I'm Herbert I am a web developer and a front end engineer feel free to checkout my creative profile!" name="ogdescription"/>
     <meta property="og:url" content="herbert-saladar.com" name="ogurl"/>
     <meta property="og:site_name" content="Herberts Creative Portfolio" name="ogsitename"/>
     <meta name="description" content="Herberts Creative Portfolio"/>
@@ -18,7 +18,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but airbclub doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
